--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                             <div class="col bg-white ms-4 d-flex flex-column align-items-center text-center custom-rounded-div p-2">
                                 <img src="/public/glucose.png" class="img-fluid" style="width: 120px; height: 80px;" alt="">
                                 <p class="bg-white fw-bold">Glucose</p>
-                                <p class="bg-white fw-bold fs-4" id="patientGlucose">120<span class="bg-white fs-6 ">mg/dl</span></p>
+                                <p class="bg-white fw-bold fs-4" id="glucose">[glu]<span class="bg-white fs-6 ">mg/dl</span></p>
                             </div>
                         </div>
 
