--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                     <tr class="bg-white">
                                         <td>Glucose</td>
                                         <td>:</td>
-                                        <td id="patientGlucose">[glucose]</td>
+                                        <td id="glucose">[glu]</td>
                                     </tr>
                                     <tr class="bg-white">
                                         <td>Blood Group</td>
